# RodgersICA

./: RodgersICADemo.ipynb  pyproject.toml
rodgersICA/: __init__.py  functions.py
rodgersica/: functions.py
