[tool.poetry]
name = 'RodgersICA'
version = '0.1.0'
description = 'Rodgers Information Content Assessment (ICA)'
authors = ['Kirk Knobelspiesse <kirk.knobelspiesse@nasa.gov>']

[tool.poetry.dependencies]
python = '^3.8'
numpy = '^1.19'

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"

[build-system]
requires = ['poetry-core~=1.0']
build-backend = 'poetry.core.masonry.api'